--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="node_modules/three/build/three.js"></script>
     <script src="node_modules/three/examples/js/controls/OrbitControls.js"></script>
     <script src="node_modules/three/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="node_modules/three/examples/js/utils/SkeletonUtils.js"></script>
 </head>
 <body>
     <canvas id="c"></canvas>
